--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,29 @@
-#slice {
-    animation: bounce 3s infinite
-}
-@keyframes bounce{
-    0%, 20%, 40%, 60%, 80%, 100%  {
-       transform: translateY(0);
-    }
-    40% {
-       transform: translateY(-55px);
-    }
-    80% {
-       transform: translateY(-45px);
-    } 
- }
-.centerAligned {
-    text-align: center;
-    color: yellow;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
  body {
      background-image: url(http://lifeofpiepizza.com/wp-content/uploads/2016/11/life-of-pie-background.jpg);
      background-size: cover;
+     font-family: Arial, Helvetica, sans-serif;
+     color: red;
+ }
+ ul {
+     margin: 0px;
+     padding: 0px;
+     list-style: none; 
+ }
+ ul li {
+     float: left;
+     width: 200px;
+     height: 40px;
+     background-color: yellow;
+     opacity: .8;
+     line-height: 40px;
+     text-align: center;
+     font-size: 20px;
+ }
+ ul li a {
+     text-decoration: none;
+     color: yellow;
+     display: block;
+ }
+ ul li a:hover {
+     background-color: yellowgreen;
  }
