--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
      line-height: 40px;
      text-align: center;
      font-size: 20px;
+     margin-right: 2px;
  }
  ul li a {
      text-decoration: none;
@@ -26,4 +27,10 @@
  }
  ul li a:hover {
      background-color: yellowgreen;
+ }
+ ul li ul li {
+     display: none;
+ }
+ ul li:hover ul li {
+     display: block;
  }
