--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,8 @@
  body {
-     background-image: url(http://lifeofpiepizza.com/wp-content/uploads/2016/11/life-of-pie-background.jpg);
-     background-size: cover;
      font-family: Arial, Helvetica, sans-serif;
      color: red;
+     background-image: url(https://www.purpleorchid.com/wp-content/uploads/2019/07/pizza-in-livermore.jpg);
  }
- ul {
-     margin: 0px;
-     padding: 0px;
-     list-style: none; 
- }
- ul li {
-     float: left;
-     width: 200px;
-     height: 40px;
-     background-color: yellow;
-     opacity: .8;
-     line-height: 40px;
-     text-align: center;
-     font-size: 20px;
-     margin-right: 2px;
- }
- ul li a {
-     text-decoration: none;
-     color: yellow;
-     display: block;
- }
- ul li a:hover {
-     background-color: yellowgreen;
- }
- ul li ul li {
-     display: none;
- }
- ul li:hover ul li {
-     display: block;
+ .block1 {
+     
  }
