--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,41 @@
  body {
      font-family: Arial, Helvetica, sans-serif;
-     color: black;
+     color: white;
     
+ }
+ #navigationBar {
+     position: relative;
+     z-index: 1;
+ }
+ ul {
+     margin: 0px;
+     padding: 0px;
+     list-style: none;
+     
+ }
+ ul li {
+     float: left;
+     width: 200px;
+     height: 40px;
+     background-color: black;
+     line-height: 40px;
+     text-align: center;
+     font-size: 20px;
+     margin-right: 3px;
+ }
+ ul li a {
+     text-decoration: none;
+     color: white;
+     display: block;
+ }
+ ul li a:hover {
+     background-color: yellowgreen;
+ }
+ ul li ul li {
+     display: none;
+ }
+ ul li:hover ul li {
+     display: block;
  }
  #slider {
      overflow: hidden;
@@ -45,4 +79,7 @@
     100% {
         left: -400%;
     }
+ }
+ #orderForm {
+     color: black;
  }
