--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,21 @@
      color: white;
     
  }
- #navigationBar {
-     position: relative;
-     z-index: 1;
+ nav.shrink {
+    background-color: black;
+    height: 60px;
+    padding-top: 0px;
+ }
+ nav.shrink.navbar-logo {
+     font-size: 20px;
+     padding: 30px 0px 0px 80px;
+     color: white;
+ }
+ nav.shrink>li>a {
+     color: white;
+     font-size: 16px;
+     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+     padding-top: 30px;
  }
  ul {
      margin: 0px;
