--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,25 @@ body {
     font-size: 18px;
     transition: all ease .5s;
 }
+.logo2 {
+    color: #fff;
+    padding: 20px;
+    font-size: 18px;
+    transition: all ease .5s;
+    animation: bounce 3s infinite;
+ }
+ @keyframes bounce{
+    0%, 20%, 40%, 60%, 80%, 100%  {
+       transform: translateY(0);
+    }
+    40% {
+       transform: translateY(-55px);
+    }
+    80% {
+       transform: translateY(-45px);
+    } 
+ }
+}
 #nav.change {
     background: red;
     transition: all ease .5s;
