--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
      font-family: Arial, Helvetica, sans-serif;
      color: white;    
+     background-color: black;
 }
 #nav {
     height: 70px;
@@ -22,6 +23,7 @@ body {
     padding: 20px;
     font-size: 18px;
     transition: all ease .5s;
+    float: right;
     animation: bounce 3s infinite;
  }
  @keyframes bounce{
@@ -84,6 +86,41 @@ body {
         left: -400%;
     }
  }
- #orderForm {
-     color: black;
- }
+.box {
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.box span {
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-bottom: 1px solid #fff;
+    border-right: 1px solid #fff;
+    transform: rotate(45deg);
+    animation: animate 2s infinite;
+}
+.box span:nth-child(1)
+{
+    animation-delay: -0.2s;
+}
+.box span:nth-child(2)
+{
+    animation-delay: -0.4s;
+}
+@keyframes animate 
+{
+    0%
+    {
+        opacity: 0;
+    }
+    50%
+    {
+        opacity: 2;
+    }
+    100%
+    {
+        opacity: 0;
+    }
