--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,6 @@ body {
        transform: translateY(-45px);
     } 
  }
-}
 #nav.change {
     background: red;
     transition: all ease .5s;
@@ -124,3 +123,19 @@ body {
     {
         opacity: 0;
     }
+}
+.initiallyHidden {
+	display:none;
+}
+
+.menu {
+	margin-left:20px;
+}
+#order {
+    text-align: center;
+    padding-bottom: 50%;
+    
+}
+html{
+    scroll-behavior: smooth;
+}
