--- a/css/styles.css
+++ b/css/styles.css
@@ -133,26 +133,18 @@ body {
 }
 #order {
     text-align: center;
-    padding-bottom: 50%;
-    
+    align-content: center;
+}
+#form  {
+    text-align: center;
+    align-content: center;
 }
 html{
     scroll-behavior: smooth;
 }
-button {
-    color: red;
-    background-color: yellow;
-}
-#makeOrder {
-    background-color: greenyellow;
-    text-align: center;
-}
-#yourOrder {
-    color: greenyellow;
-    text-align: center;
-    text-underline-position: below;
-    text-decoration: underline;
-}
 footer {
+    text-align: center;
+}
+.centerAligned {
     text-align: center;
 }
